# covid19

./: .gitignore  README.md  pyproject.toml
covid19/: covid.py  scrap.py
notebooks/: visualizations.ipynb
tests/: dados_test_Brasil.xlsx  dados_test_CE.xlsx  test_covid19.py
