[tool.poetry]
name = "covid19"
version = "0.1.0"
description = ""
authors = ["Darlan Cavalcante Moreira <darcamo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^3.141.0"
pandas = "^1.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.14.0"
python-language-server = "^0.31.10"
isort = "^4.3.21"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
