[tool.poetry]
name = "covid19"
version = "0.1.0"
description = ""
authors = ["Darlan Cavalcante Moreira <darcamo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^3.141.0"
pandas = "^1.0.3"
numpy = "^1.18.4"
matplotlib = "^3.2.1"
ipympl = "^0.5.6"
xlrd = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.14.0"
python-language-server = "^0.31.10"
isort = "^4.3.21"
jupyter-lsp = "^0.8.0"
jupyterlab = "^2.1.2"
yapf = "^0.30.0"
pylint = "^2.5.2"
ipywidgets = "^7.5.1"
bokeh = "^2.0.2"
jupyterlab_code_formatter = "^1.3.1"
pyls-isort = "^0.1.1"
mypy = "^0.770"
pudb = "^2019.2"
pip = "^20.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
